--- a/EntPrivateCloudWithManila/openstack-director/templates/ips-from-pool-all.yaml
+++ b/EntPrivateCloudWithManila/openstack-director/templates/ips-from-pool-all.yaml
@@ -1,12 +1,12 @@
 # Environment file demonstrating how to pre-assign IPs to all node types
 resource_registry:
-  OS::TripleO::Controller::Ports::ExternalPort: /home/stack/templates/ports/external_from_pool.yaml
-  OS::TripleO::Controller::Ports::InternalApiPort: /home/stack/templates/ports/internal_api_from_pool.yaml
-  OS::TripleO::Controller::Ports::StoragePort: /home/stack/templates/ports/storage_from_pool.yaml
-  OS::TripleO::Controller::Ports::StorageMgmtPort: /home/stack/templates/ports/storage_mgmt_from_pool.yaml
-  OS::TripleO::Controller::Ports::TenantPort: /home/stack/templates/ports/tenant_from_pool.yaml
+  OS::TripleO::ControllerStorageNfs::Ports::ExternalPort: /home/stack/templates/ports/external_from_pool.yaml
+  OS::TripleO::ControllerStorageNfs::Ports::InternalApiPort: /home/stack/templates/ports/internal_api_from_pool.yaml
+  OS::TripleO::ControllerStorageNfs::Ports::StoragePort: /home/stack/templates/ports/storage_from_pool.yaml
+  OS::TripleO::ControllerStorageNfs::Ports::StorageMgmtPort: /home/stack/templates/ports/storage_mgmt_from_pool.yaml
+  OS::TripleO::ControllerStorageNfs::Ports::TenantPort: /home/stack/templates/ports/tenant_from_pool.yaml
   # Management network is optional and disabled by default
-  OS::TripleO::Controller::Ports::ManagementPort: /home/stack/templates/ports/management_from_pool.yaml
+  OS::TripleO::ControllerStorageNfs::Ports::ManagementPort: /home/stack/templates/ports/management_from_pool.yaml
 
   OS::TripleO::Compute::Ports::ExternalPort: /home/stack/templates/ports/noop.yaml
   OS::TripleO::Compute::Ports::InternalApiPort: /home/stack/templates/ports/internal_api_from_pool.yaml
@@ -22,96 +22,81 @@ resource_registry:
   OS::TripleO::CephStorage::Ports::TenantPort: /home/stack/templates/ports/noop.yaml
   OS::TripleO::CephStorage::Ports::ManagementPort: /home/stack/templates/ports/management_from_pool.yaml
 
-  #OS::TripleO::ObjectStorage::Ports::ExternalPort: ../network/ports/noop.yaml
-  #OS::TripleO::ObjectStorage::Ports::InternalApiPort: ../network/ports/internal_api_from_pool.yaml
-  #OS::TripleO::ObjectStorage::Ports::StoragePort: ../network/ports/storage_from_pool.yaml
-  #OS::TripleO::ObjectStorage::Ports::StorageMgmtPort: ../network/ports/storage_mgmt_from_pool.yaml
-  #OS::TripleO::ObjectStorage::Ports::TenantPort: ../network/ports/noop.yaml
-  #OS::TripleO::ObjectStorage::Ports::ManagementPort: ../network/ports/management_from_pool.yaml
-
-  #OS::TripleO::BlockStorage::Ports::ExternalPort: ../network/ports/noop.yaml
-  #OS::TripleO::BlockStorage::Ports::InternalApiPort: ../network/ports/internal_api_from_pool.yaml
-  #OS::TripleO::BlockStorage::Ports::StoragePort: ../network/ports/storage_from_pool.yaml
-  #OS::TripleO::BlockStorage::Ports::StorageMgmtPort: ../network/ports/storage_mgmt_from_pool.yaml
-  #OS::TripleO::BlockStorage::Ports::TenantPort: ../network/ports/noop.yaml
-  #OS::TripleO::BlockStorage::Ports::ManagementPort: ../network/ports/management_from_pool.yaml
 
 parameter_defaults:
-  ControllerIPs:
+  ControllerStorageNfsIPs:
     # Each controller will get an IP from the lists below, first controller, first IP
     external:
-    - 10.208.81.241
-    - 10.208.81.242
-    - 10.208.81.243
+    - 10.0.255.24
+    - 10.0.255.25
+    - 10.0.255.26
     internal_api:
-    - 192.168.10.11
-    - 192.168.10.12
-    - 192.168.10.13
-    storage:
-    - 192.168.30.11
-    - 192.168.30.12
-    - 192.168.30.13
-    storage_mgmt:
-    - 192.168.40.11
-    - 192.168.40.12
-    - 192.168.40.13
+    - 192.168.10.24
+    - 192.168.10.25
+    - 192.168.10.26
     tenant:
-    - 192.168.20.11
-    - 192.168.20.12
-    - 192.168.20.13
+    - 192.168.20.24
+    - 192.168.20.25
+    - 192.168.20.26
+    storage:
+    - 192.168.30.24
+    - 192.168.30.25
+    - 192.168.30.26
+    storage_mgmt:
+    - 192.168.40.24
+    - 192.168.40.25
+    - 192.168.40.26
+    storage_nfs:
+    - 192.168.50.24
+    - 192.168.50.25
+    - 192.168.50.26
     management:
-    - 192.168.120.11
-    - 192.168.120.12
-    - 192.168.120.13
+    - 192.168.120.24
+    - 192.168.120.25
+    - 192.168.120.26
   ComputeIPs:
     # Each compute will get an IP from the lists below, first compute, first IP
     internal_api:
-    - 192.168.10.21
-    - 192.168.10.22
-    - 192.168.10.23
-    storage:
-    - 192.168.30.21
-    - 192.168.30.22
-    - 192.168.30.23
+    - 192.168.10.32
+    - 192.168.10.33
+    - 192.168.10.34
+    #- 192.168.10.35
+    #- 192.168.10.36
     tenant:
-    - 192.168.20.21
-    - 192.168.20.22
-    - 192.168.20.23
+    - 192.168.20.32
+    - 192.168.20.33
+    - 192.168.20.34
+    #- 192.168.20.35
+    #- 192.168.20.36
+    storage:
+    - 192.168.30.32
+    - 192.168.30.33
+    - 192.168.30.34
+    #- 192.168.30.35
+    #- 192.168.30.36
     management:
-    - 192.168.120.21
-    - 192.168.120.22
-    - 192.168.120.23
+    - 192.168.120.32
+    - 192.168.120.33
+    - 192.168.120.34
+    #- 192.168.120.35
+    #- 192.168.120.36
   CephStorageIPs:
     # Each ceph node will get an IP from the lists below, first node, first IP
     storage:
-    - 192.168.30.61
-    - 192.168.30.62
-    - 192.168.30.63
+    - 192.168.30.232
+    - 192.168.30.233
+    - 192.168.30.234
+    #- 192.168.30.235
+    #- 192.168.30.236
     storage_mgmt:
-    - 192.168.40.61
-    - 192.168.40.62
-    - 192.168.40.63
+    - 192.168.40.232
+    - 192.168.40.233
+    - 192.168.40.234
+    #- 192.168.40.235
+    #- 192.168.40.236
     management:
-    - 192.168.120.61
-    - 192.168.120.62
-    - 192.168.120.63
-  #SwiftStorageIPs:
-    # Each swift node will get an IP from the lists below, first node, first IP
-    #internal_api:
-    #- 172.16.2.254
-    #storage:
-    #- 172.16.1.254
-    #storage_mgmt:
-    #- 172.16.3.254
-    #management:
-    #- 172.16.4.254
-  #BlockStorageIPs:
-    # Each cinder node will get an IP from the lists below, first node, first IP
-    #internal_api:
-    #- 172.16.2.250
-    #storage:
-    #- 172.16.1.250
-    #storage_mgmt:
-    #- 172.16.3.250
-    #management:
-    #- 172.16.4.250
+    - 192.168.120.232
+    - 192.168.120.233
+    - 192.168.120.234
+    #- 192.168.120.235
+    #- 192.168.120.236
