--- a/EntPrivateCloudWithManila/openstack-director/templates/scheduler_hints_env.yaml
+++ b/EntPrivateCloudWithManila/openstack-director/templates/scheduler_hints_env.yaml
@@ -14,6 +14,10 @@ parameter_defaults:
     adpcloud-compute-0: kvm001
     adpcloud-compute-1: kvm002
     adpcloud-compute-2: kvm003
+    #adpcloud-compute-3: kvm004
+    #adpcloud-compute-4: kvm005
     adpcloud-cephstorage-0: ceph001
     adpcloud-cephstorage-1: ceph002
     adpcloud-cephstorage-2: ceph003
+    #adpcloud-cephstorage-3: ceph004
+    #adpcloud-cephstorage-4: ceph005
